<resources>
    <string name="app_name">NoteIt</string>
    <string name="add_a_note">Add A Note</string>
    <string name="add_title">Add Title</string>
    <string name="note">Note</string>
    <string name="addImage">Add Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
</resources>